--- a/src/index.css
+++ b/src/index.css
@@ -326,7 +326,7 @@ footer {
     display: flex;
     flex-flow: wrap;
     justify-content: space-evenly;
-    align-items: start;
+    align-items: flex-start;
     margin-top: 0.2rem;
     margin-bottom: 0.1rem;
     animation: scrollprojectsContainerIn 2s forwards;
@@ -451,14 +451,15 @@ form textarea {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-form button {
+form input[type="submit"] {
+  width: auto;
   background-color: white;
   padding: 0.3rem 0.8rem;
   border: none;
   margin-bottom: 1.5rem;
   transition: all 0.5s;
 }
-form button:hover {
+form input[type="submit"]:hover {
   background-color: rgb(188, 255, 161);
 }
 
