--- a/src/index.css
+++ b/src/index.css
@@ -12,10 +12,10 @@ body {
 .backgroundImage {
   background-image: url("./images/tribar-md.png");
   background-color: white;
-  background-size: 25rem;
+  background-size: 23rem;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-position: center;
+  background-position: 50% 35%;
 }
 
 
@@ -77,7 +77,6 @@ footer {
   width: 12rem;
   background-color: rgb(230, 230, 166);
   padding: 0.3rem 2rem 0.3rem 1rem;
-
   margin-top: 4rem;
   animation: scrollPageNameIn 2s forwards;
 }
