--- a/src/index.css
+++ b/src/index.css
@@ -64,7 +64,7 @@ nav {
 }
 
 
-; /* Footer */
+/* Footer */
 footer {
   margin: 0;
 }
@@ -126,7 +126,8 @@ footer {
   animation: fadeWelcomeTextIn 4.5s forwards;
 }
 .welcomeText h1 {
-  font-size: 4.7rem; 
+  font-size: 4.7rem;
+  margin-bottom: 0.5rem; 
 }
 
 /* "to" */
@@ -217,8 +218,8 @@ footer {
 }
 .creativeText h2 {
   color: rgb(161, 161, 60);
-  margin-top: 1.5rem;
-  margin-bottom: 1rem;
+  margin-top: 0rem;
+  margin-bottom: 0rem;
   font-size: 4rem;
 }
 
@@ -252,7 +253,7 @@ footer {
 .galleryText h2 {
   font-size: 4rem;
   color: rgb(56, 199, 255);
-  margin-top: 0.5;
+  margin-top: 0.7rem;
   margin-bottom: 4rem;
 }
 .homeLink {
