--- a/src/index.css
+++ b/src/index.css
@@ -195,8 +195,13 @@ footer {
 }
 .myText h4 {
   font-size: 2.5rem;
+  color: rgb(68, 138, 199);
   margin-top: 0;
   margin-bottom: 0;
+  transition: all 0.5s;
+}
+.myText h4:hover {
+  color: rgb(118, 177, 230);
 }
 
 /* "creative" */
@@ -226,10 +231,14 @@ footer {
   }
 }
 .creativeText h2 {
+  font-size: 4rem;
   color: rgb(161, 161, 60);
   margin-top: 0rem;
   margin-bottom: 0rem;
-  font-size: 4rem;
+  transition: all 0.5s;
+}
+.creativeText h2:hover {
+  color: rgb(185, 185, 55);
 }
 
 /* "gallery" */
@@ -263,10 +272,13 @@ footer {
   color: rgb(56, 199, 255);
   margin-top: 0.7rem;
   margin-bottom: 4rem;
+  transition: all 0.5s;
+}
+.galleryText h2:hover {
+  color: rgb(98, 211, 255);
 }
 .homeLink {
   text-decoration: none;
-  color: black;
 }
 
 
@@ -372,12 +384,129 @@ footer {
 }
 .aboutContactLink a {
   text-decoration: none;
-  color: rgb(81, 32, 128);
+  color: rgb(60, 138, 240);
   transition: all 0.5s;
 }
 .aboutContactLink a:hover {
-  color: rgb(146, 110, 172);
+  color: rgb(129, 176, 241);
 }
+
+
+/* CV page */
+@media (min-device-width: 20em) {
+  @keyframes scrollCvContainerIn {
+    from {opacity: 0;}
+    to {opacity: 1;}
+  }
+  .cvContainer {
+    display: flex;
+    justify-content: flex-center;
+    align-items: flex-center;
+    background-color: rgb(240, 240, 240);
+    margin: 2rem 0;
+    animation: scrollCvContainerIn 2s forwards;
+  }
+}
+@media only screen and (min-device-width: 60em) {
+  @keyframes scrollCvContainerIn {
+    from {margin-left: -150%;}
+    to {margin-left: 5%;}
+    from {opacity: 0;}
+    to {opacity: 1;}
+  }
+  .cvContainer {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    background-color: rgb(240, 240, 240);
+    margin-top: 2rem;
+    margin-right: 5%;
+    margin-bottom: 2rem;
+    animation: scrollCvContainerIn 2s forwards;
+  }
+}
+.cvContainer a {
+  text-decoration: none;
+  color: rgb(60, 138, 240);
+  transition: all 0.5s;
+}
+.cvContainer a:hover {
+  color: rgb(129, 176, 241);
+}
+.cvDetailsContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex: 1 3 auto;
+  background-color: rgb(240, 240, 240);
+  padding-top: 3%;
+  padding-left: 3%;
+  padding-right: 3%;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+.cvDetailsContainer h1 {
+  margin-bottom: 0;
+}
+.cvDetailsContainer h2 {
+  margin-top: 0.4rem;
+  margin-bottom: 0;
+}
+.cvDetailsContainer h3 {
+  text-align: center;
+  margin-bottom: 0;
+}
+.cvPictureContainer img {
+  width: 15rem;
+}
+.cvProjectsContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex: 1 1 auto;
+  background-color: rgb(240, 240, 240);
+  padding-top: 5%;
+  padding-left: 3%;
+  padding-right: 3%;
+  margin-top: 0;
+  margin-bottom: 2rem;
+}
+.cvProjectsContainer h3 {
+  margin-bottom: 0;
+}
+.cvProjectContainer {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  margin-top: 1.5rem;
+}
+.cvProjectContainer h4 {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+.cvProjectLink {
+  font-size: 1rem;
+  padding-left: 0.7rem;
+}
+.cvEducationDetailsContainer {
+  margin-top: 0.3rem;
+} 
+.cvEducationDetailsContainer h4,
+.cvEducationDetailsContainer h5 {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+.cvWorkDetailsContainer {
+  margin-top: 0.3rem;
+}
+.cvWorkDetailsContainer h4,
+.cvWorkDetailsContainer h5 {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
 
 /* Projects page */
 @media (min-device-width: 20em) {
@@ -488,9 +617,12 @@ footer {
   margin-bottom: 2.4rem;
   animation: scrollContactContainerIn 2s forwards;
 }
-.contactContainer div h2,
-.contactContainer div h3 {
+.contactContainer div h1 {
   margin-top: 1rem;
+  margin-bottom: 0;
+}
+.contactContainer div h2 {
+  margin-top: 0.5rem;
   margin-bottom: 0;
 }
 .contactWaysContainer {
@@ -504,16 +636,23 @@ footer {
   padding-right: 5%;
   padding-left: 5%;
 }
+.contactEmailContainer h3 {
+  margin-bottom: 0.6rem;
+}
 .contactEmailContainer h4 {
   margin-top: 0rem;
   margin-bottom: 0.7rem;
+}
+.contactPhoneContainer h3 {
+  margin-bottom: 0.6rem;
 }
 .contactPhoneContainer h4 {
   margin-top: 0rem;
   margin-bottom: 0.7rem;
 }
 form h3 {
-  padding-bottom: 1rem;
+  padding-bottom: 0;
+  margin-bottom: 0.3rem;
 }
 .formInput {
   width: 100%;
@@ -542,123 +681,6 @@ form h3 {
 }
 .formSubmit:hover {
   background-color: rgb(188, 255, 161);
-}
-
-
-/* CV page */
-@media (min-device-width: 20em) {
-  @keyframes scrollCvContainerIn {
-    from {opacity: 0;}
-    to {opacity: 1;}
-  }
-  .cvContainer {
-    display: flex;
-    justify-content: flex-center;
-    align-items: flex-center;
-    background-color: rgb(240, 240, 240);
-    margin: 2rem 0;
-    animation: scrollCvContainerIn 2s forwards;
-  }
-}
-@media only screen and (min-device-width: 60em) {
-  @keyframes scrollCvContainerIn {
-    from {margin-left: -150%;}
-    to {margin-left: 5%;}
-    from {opacity: 0;}
-    to {opacity: 1;}
-  }
-  .cvContainer {
-    display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
-    background-color: rgb(240, 240, 240);
-    margin-top: 2rem;
-    margin-right: 5%;
-    margin-bottom: 2rem;
-    animation: scrollCvContainerIn 2s forwards;
-  }
-}
-.cvContainer a {
-  text-decoration: none;
-  color: rgb(81, 32, 128);
-  transition: all 0.5s;
-}
-.cvContainer a:hover {
-  color: rgb(146, 110, 172);
-}
-
-.cvDetailsContainer {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
-  flex: 1 3 auto;
-  background-color: rgb(240, 240, 240);
-  padding-top: 3%;
-  padding-left: 3%;
-  padding-right: 3%;
-  margin-top: 2rem;
-  margin-bottom: 2rem;
-}
-.cvDetailsContainer h1 {
-  margin-bottom: 0;
-}
-.cvDetailsContainer h2 {
-  margin-top: 0.4rem;
-  margin-bottom: 0;
-}
-.cvDetailsContainer h3 {
-  text-align: center;
-  margin-bottom: 0;
-}
-.cvPictureContainer img {
-  width: 15rem;
-}
-.cvProjectsContainer {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
-  flex: 1 1 auto;
-  background-color: rgb(240, 240, 240);
-  padding-top: 5%;
-  padding-left: 3%;
-  padding-right: 3%;
-  margin-top: 0;
-  margin-bottom: 2rem;
-}
-.cvProjectsContainer h3 {
-  margin-bottom: 0;
-}
-.cvProjectContainer {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  margin-top: 1.5rem;
-}
-.cvProjectContainer h4 {
-  margin-top: 0;
-  margin-bottom: 0;
-}
-.cvProjectLink {
-  font-size: 1rem;
-  padding-left: 0.7rem;
-}
-.cvEducationDetailsContainer {
-  margin-top: 0.3rem;
-} 
-.cvEducationDetailsContainer h4,
-.cvEducationDetailsContainer h5 {
-  margin-top: 0;
-  margin-bottom: 0;
-}
-.cvWorkDetailsContainer {
-  margin-top: 0.3rem;
-}
-.cvWorkDetailsContainer h4,
-.cvWorkDetailsContainer h5 {
-  margin-top: 0;
-  margin-bottom: 0;
 }
 
 
@@ -763,10 +785,9 @@ form h3 {
 .notFoundGetBackLink {
   text-decoration: none;
   background-color:white;
-  color: black;
   padding: 0.3rem;
   margin-top: 1rem;
-  margin-bottom: 0rem;
+  margin-bottom: 2rem;
   transition: all 0.5s;
 }
 .notFoundGetBackLink:hover {
