--- a/src/index.css
+++ b/src/index.css
@@ -430,7 +430,7 @@ footer {
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
-  flex: 1 3 auto;
+  flex: 1 2 auto;
   background-color: rgb(240, 240, 240);
   padding-top: 3%;
   padding-left: 3%;
@@ -456,7 +456,7 @@ footer {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  align-items: flex-start;
+  
   flex: 1 1 auto;
   background-color: rgb(240, 240, 240);
   padding-top: 5%;
@@ -467,6 +467,7 @@ footer {
 }
 .cvProjectsContainer h3 {
   margin-bottom: 0;
+  text-align: center;
 }
 .cvProjectContainer {
   display: flex;
