--- a/src/index.css
+++ b/src/index.css
@@ -408,6 +408,7 @@ footer {
   }
   .cvContainer {
     display: flex;
+    flex-flow: wrap;
     justify-content: flex-start;
     align-items: flex-start;
     background-color: rgb(240, 240, 240);
@@ -430,7 +431,7 @@ footer {
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
-  flex: 1 2 auto;
+  width: 25rem;
   background-color: rgb(240, 240, 240);
   padding-top: 3%;
   padding-left: 3%;
@@ -456,10 +457,9 @@ footer {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  
-  flex: 1 1 auto;
+  width: 55rem;
   background-color: rgb(240, 240, 240);
-  padding-top: 5%;
+  padding-top: 4rem;
   padding-left: 3%;
   padding-right: 3%;
   margin-top: 0;
