--- a/src/index.css
+++ b/src/index.css
@@ -248,7 +248,7 @@ footer {
   .galleryText {
     padding-bottom: 0.3rem;
     margin-top: 0;
-    margin-left: 48%;
+    margin-left: 47%;
     animation: fadeGalleryTextIn 1.4s forwards;
   }
 }
@@ -515,6 +515,7 @@ footer {
     background-color: white;
     padding-top: 0.3rem;
     padding-bottom: 0.5rem;
+    padding-left: 5%;
     margin-left: 0;
     animation: fadeProjectsInfoTextIn 2s forwards;
   }
