--- a/src/index.css
+++ b/src/index.css
@@ -50,6 +50,7 @@ nav {
   background-color: white;
 }
 .navLink {
+  display: inline-block;
   text-decoration: none;
   background-color:white;
   color: black;
@@ -276,6 +277,7 @@ footer {
   color: rgb(98, 211, 255);
 }
 .homeLink {
+  display: inline-block;
   text-decoration: none;
 }
 
@@ -342,6 +344,7 @@ footer {
   margin-bottom: 1.5rem;
 }
 .aboutCVLink {
+  display: inline-block;
   text-decoration: none;
   font-weight: 600;
   background-color:white;
@@ -353,6 +356,7 @@ footer {
   background-color: rgb(188, 255, 161);
 }
 .aboutLinkedInLink {
+  display: inline-block;
   text-decoration: none;
   font-weight: 600;
   background-color:white;
@@ -364,6 +368,7 @@ footer {
   background-color: rgb(255, 212, 155);
 }
 .aboutGitHubLink {
+  display: inline-block;
   text-decoration: none;
   font-weight: 600;
   background-color:white;
@@ -480,6 +485,7 @@ footer {
   margin-bottom: 0;
 }
 .cvProjectLink {
+  display: inline-block;
   font-size: 1rem;
   padding-left: 0.7rem;
 }
@@ -596,6 +602,7 @@ footer {
   margin-bottom: 1.5rem;
 }
 .projectTryItLink {
+  display: inline-block;
   text-decoration: none;
   background-color:white;
   color: black;
@@ -608,6 +615,7 @@ footer {
   background-color: rgb(188, 255, 161);
 }
 .projectGitHubLink {
+  display: inline-block;
   text-decoration: none;
   background-color:white;
   color: black;
@@ -818,6 +826,7 @@ form h3 {
   margin-bottom: 3.2rem;
 }
 .notFoundGetBackLink {
+  display: inline-block;
   text-decoration: none;
   background-color:white;
   padding: 0.3rem;
