--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ body {
 }
 @media only screen and (min-device-width: 60em) {
   body {
-    background-image: url("./images/concentric-pattern.jpg");
+    background-image: url("./images/bw-stripes.jpg");
     background-color: white;
     background-size: cover;
     background-repeat: no-repeat;
