--- a/src/index.css
+++ b/src/index.css
@@ -316,7 +316,7 @@ footer {
     justify-content: center;
     align-items: center;
     margin-top: 2rem;
-    margin-bottom: 5rem;
+    margin-bottom: 4rem;
     animation: scrollDetailsContainerIn 2s forwards;
   }
 }
@@ -509,6 +509,10 @@ footer {
 
 
 /* Projects page */
+.projectsPageContainer {
+  margin-bottom: 3rem;
+}
+
 .projectsIntroTextContainer {
   margin: 0;
 }
