--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,700;1,700&family=Source+Sans+Pro:wght@200;300&display=swap");
+/* Colors */
 html,
 body {
-  background-color: #ffffff;
+  background-color: white;
   /* Height and width fallback for older browsers. */
   height: 100%;
   width: 100%;
