--- a/src/App.sass
+++ b/src/App.sass
@@ -1,8 +1,26 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,700;1,700&family=Source+Sans+Pro:wght@200;300&display=swap")
 
+/* Colors */
+$lightGrey1: rgb(230,230,230)
+$orange: rgb(255, 163, 43)
+$beige: rgb(230, 230, 166)
+$cornflowerBlue: rgb(68, 138, 199)
+$darkKhaki: rgb(161, 161, 60)
+$deepSkyBlue: rgb(118, 177, 230)
+$olive: rgb(185, 185, 55)
+$skyBlue: rgb(56, 199, 255)
+$lightSkyBlue1: rgb(98, 211, 255)
+$lightGrey2: rgb(240, 240, 240)
+$paleGreen: rgb(188, 255, 161)
+$wheat: rgb(255, 212, 155)
+$lightBlue: rgb(166, 230, 255)
+$dodgerBlue: rgb(60, 138, 240)
+$lightSkyBlue2: rgb(129, 176, 241)
+
+
 html, 
 body 
-  background-color: #ffffff
+  background-color: white
 
   /* Height and width fallback for older browsers. */
   height: 100%
@@ -25,7 +43,6 @@ body
       attachment: fixed
   
 
-
 .logoImage 
   background:
     image: url("./images/tribar-md.png")
@@ -38,7 +55,6 @@ body
 
 .warningColor 
   color: red
-
 
 
 /* Navigation Bar */
@@ -70,10 +86,10 @@ nav
   transition: all 0.5s
 
 .navLink:hover 
-  background-color: rgb(230, 230, 230)
+  background-color: $lightGrey1
 
 .textEnlighted 
-  color: rgb(255, 163, 43)
+  color: $orange
 
 
 
@@ -89,14 +105,14 @@ footer
 @media (min-device-width: 20em) 
   .footerContainer span 
     font-weight: 500
-    color: rgb(255, 163, 43)
+    color: $orange
   
 
 @media only screen and (min-device-width: 60em) 
   .footerContainer span 
     font-weight: 500
     text-shadow: 0px 0px 1px black
-    color: rgb(255, 163, 43)
+    color: $orange
   
 
 
@@ -114,7 +130,7 @@ footer
 .pageNameContainer 
   text-align: right
   width: 12rem
-  background-color: rgb(230, 230, 166)
+  background-color: $beige
   padding: 0.3rem 2rem 0.3rem 1rem
   margin-top: 4rem
   animation: scrollPageNameIn 2s forwards
@@ -149,7 +165,7 @@ footer
 
 .welcomeText 
   text-align: center
-  color: rgb(255, 163, 43)
+  color: $orange
   margin-top: 0.2rem
   animation: fadeWelcomeTextIn 4.5s forwards
 
@@ -229,14 +245,14 @@ footer
 
 .myText h4 
   font-size: 2.5rem
-  color: rgb(68, 138, 199)
+  color: $cornflowerBlue
   margin:
     top: 0
     bottom: 1.5rem
   transition: all 0.5s
 
 .myText h4:hover 
-  color: rgb(118, 177, 230)
+  color: $deepSkyBlue
 
 
 /* "creative" */
@@ -275,14 +291,14 @@ footer
 
 .creativeText h2 
   font-size: 4rem
-  color: rgb(161, 161, 60)
+  color: $darkKhaki
   margin:
     top: 0rem
     bottom: 0rem
   transition: all 0.5s
 
 .creativeText h2:hover 
-  color: rgb(185, 185, 55)
+  color: $olive
 
 
 /* "gallery" */
@@ -320,14 +336,14 @@ footer
 
 .galleryText h2 
   font-size: 4rem
-  color: rgb(56, 199, 255)
+  color: $skyBlue
   margin:
     top: 0.7rem
     bottom: 4rem
   transition: all 0.5s
 
 .galleryText h2:hover 
-  color: rgb(98, 211, 255)
+  color: $lightSkyBlue1
 
 .homeLink 
   display: inline-block
@@ -382,7 +398,7 @@ footer
   width: 60%
   padding: 0.5rem 2rem
   margin: 2rem 1%
-  background-color: rgb(240, 240, 240)
+  background-color: $lightGrey2
 
 .aboutDetailsText h2 
   margin-top: 0rem
@@ -416,7 +432,7 @@ footer
   transition: all 0.5s
 
 .aboutCVLink:hover 
-  background-color: rgb(188, 255, 161)
+  background-color: $paleGreen
 
 .aboutLinkedInLink 
   display: inline-block
@@ -428,7 +444,7 @@ footer
   transition: all 0.5s
 
 .aboutLinkedInLink:hover 
-  background-color: rgb(255, 212, 155)
+  background-color: $wheat
 
 .aboutGitHubLink 
   display: inline-block
@@ -440,15 +456,15 @@ footer
   transition: all 0.5s
 
 .aboutGitHubLink:hover 
-  background-color: rgb(166, 230, 255)
+  background-color: $lightBlue
 
 .aboutContactLink a 
   text-decoration: none
-  color: rgb(60, 138, 240)
+  color: $dodgerBlue
   transition: all 0.5s
 
 .aboutContactLink a:hover 
-  color: rgb(129, 176, 241)
+  color: $lightSkyBlue2
 
 
 
@@ -464,7 +480,7 @@ footer
     display: flex
     justify-content: flex-center
     align-items: flex-center
-    background-color: rgb(240, 240, 240)
+    background-color: $lightGrey2
     margin: 2rem 0
     animation: fadeCvContainerIn 2s forwards
   
@@ -485,7 +501,7 @@ footer
     flex-flow: wrap
     justify-content: flex-start
     align-items: flex-start
-    background-color: rgb(240, 240, 240)
+    background-color: $lightGrey2
     margin:
       top: 2rem
       right: 5%
@@ -495,11 +511,11 @@ footer
 
 .cvContainer a 
   text-decoration: none
-  color: rgb(60, 138, 240)
+  color: $dodgerBlue
   transition: all 0.5s
 
 .cvContainer a:hover 
-  color: rgb(129, 176, 241)
+  color: $lightSkyBlue2
 
 .cvDetailsContainer 
   display: flex
@@ -507,7 +523,7 @@ footer
   justify-content: flex-start
   align-items: flex-start
   width: 25rem
-  background-color: rgb(240, 240, 240)
+  background-color: $lightGrey2
   padding:
     top: 3%
     left: 3%
@@ -536,7 +552,7 @@ footer
   flex-direction: column
   justify-content: flex-start
   width: 50rem
-  background-color: rgb(240, 240, 240)
+  background-color: $lightGrey2
   padding:
     top: 4rem
     left: 3%
@@ -674,7 +690,7 @@ footer
   align-items: center
   flex-direction: column
   text-align: center
-  background-color: rgb(240, 240, 240)
+  background-color: $lightGrey2
   padding: 0.3rem
   margin: 1rem 2rem 1.8rem 2rem
 
@@ -708,7 +724,7 @@ footer
   transition: all 1s
 
 .projectTryItLink:hover 
-  background-color: rgb(188, 255, 161)
+  background-color: $paleGreen
 
 .projectGitHubLink 
   display: inline-block
@@ -722,7 +738,7 @@ footer
   transition: all 1s
 
 .projectGitHubLink:hover 
-  background-color: rgb(166, 230, 255)
+  background-color: $lightBlue
 
 
 
@@ -744,7 +760,7 @@ footer
   text-align: center
   flex-direction: column
   width: 30%
-  background-color: rgb(240, 240, 240)
+  background-color: $lightGrey2
   padding:
     top: .5rem
     right: 15%
@@ -796,11 +812,11 @@ footer
 
 .contactLink a 
   text-decoration: none
-  color: rgb(60, 138, 240)
+  color: $dodgerBlue
   transition: all 0.5s
 
 .contactLink a:hover 
-  color: rgb(129, 176, 241)
+  color: $lightSkyBlue2
 
 form h3 
   padding-bottom: 0
@@ -828,7 +844,7 @@ form h3
   transition: all 0.5s
 
 .formSubmit:hover 
-  background-color: rgb(188, 255, 161)
+  background-color: $paleGreen
 
 
 
@@ -964,4 +980,4 @@ form h3
   transition: all 0.5s
 
 .notFoundGetBackLink:hover 
-  background-color: rgb(188, 255, 161)
+  background-color: $paleGreen
