--- a/src/App.sass
+++ b/src/App.sass
@@ -36,7 +36,7 @@ body
 @media only screen and (min-device-width: 60em) 
   body 
     background:
-      image: url("./Images/bw-stripes.jpg")
+      image: url("./images/bw-stripes.jpg")
       color: white
       size: cover
       repeat: no-repeat
@@ -45,7 +45,7 @@ body
 
 .logoImage 
   background:
-    image: url("./Images/tribar-md.png")
+    image: url("./images/tribar-md.png")
     color: white
     size: 23rem
     repeat: no-repeat
