--- a/src/App.sass
+++ b/src/App.sass
@@ -127,7 +127,7 @@ footer
   to
     opacity: 1
 
-.pageNameContainer 
+.pageTitleContainer 
   text-align: right
   width: 12rem
   background-color: $beige
@@ -135,7 +135,7 @@ footer
   margin-top: 4rem
   animation: scrollPageNameIn 2s forwards
 
-.pageNameContainer h2 
+.pageTitleContainer h2 
   margin:
     top: 0
     bottom: 0
